--- a/package.json
+++ b/package.json
@@ -8,9 +8,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "framer-motion": "^5.5.5",
     "next": "12.0.7",
+    "nprogress": "^0.2.0",
+    "popmotion": "^11.0.3",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "styled-components": "^5.3.3"
   },
   "devDependencies": {
     "eslint": "8.4.1",
